# GarudaHS

./: .gitignore  CMakeLists.txt  FILE_INTEGRITY_IMPLEMENTATION_SUMMARY.md  GarudaHS-V.1.0.2.sln  GarudaHS.sln  NAMA_FUNGSI_PENDEK.md  README.md  README_Enhanced.md  SimpleTest.cpp  TestCompilation.cpp  TestDLLFixed.cpp  TestDLLFixed.vcxproj  TestDLLLoad.cpp  TestExports.cpp  build.bat  build_enhanced.bat  example_usage_short.cpp  garudahs_config.ini
CRCGen/: CRCGen.cpp  CRCGen.vcxproj  CRCGen.vcxproj.filters
CRCGen/Debug/: CRCGen.exe.recipe  CRCGen.ilk  vc143.idb
Client/: Client.vcxproj  Client.vcxproj.filters  dllmain.cpp
Client/Debug/: Client.dll.recipe  Client.ilk  vc143.idb
Client/include/: AntiDebug.h  CRCChecker.h  ClientSocket.h  Config.h  ConfigDecrypt.h  DllScanner.h  FileChecker.h  HWID.h  IATHookScanner.h  MemScanner.h  OverlayScanner.h  ProcessWatcher.h  ThreadProtector.h  ThreadWatcher.h  VMDetector.h  pch.h
Client/src/: AntiDebug.cpp  CRCChecker.cpp  ClientSocket.cpp  ConfigDecrypt.cpp  DllScanner.cpp  FileChecker.cpp  HWID.cpp  IATHookScanner.cpp  MemScanner.cpp  OverlayScanner.cpp  ProcessWatcher.cpp  ThreadProtector.cpp  ThreadWatcher.cpp  VMDetector.cpp
Debug/: AC-Log-2025-05-02.txt  Client.exp  Client.lib  GarudaHS_Client.exp  TestDLLFixed.exe.recipe  TestDLLFixed.ilk  TestDLLFixed.vcxproj.FileListAbsolute.txt  client.exp  client.lib  vc143.idb
Debug/TestDLLFixed.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Debug/data/: blocked_hwids.txt
Doc/: Doc.md
EncryptIP/: EncryptIP.cpp  EncryptIP.vcxproj  EncryptIP.vcxproj.filters
EncryptIP/Debug/: EncryptIP.exe.recipe  EncryptIP.ilk  vc143.idb
GarudaHS_Client/: AntiCheat_Test.cpp  BUILD_INSTRUCTIONS.md  CLEANUP_SUMMARY.md  CMakeLists.txt  COMPILATION_STATUS.md  GarudaHS_Client.def  GarudaHS_Client.vcxproj  GarudaHS_Client.vcxproj.filters  MEMORY_SCANNER_IMPLEMENTATION_SUMMARY.md  MEMORY_SCANNER_README.md  PROJECT_SUMMARY.md  README.md  README_STATIC.md  Test_DLL_PowerShell.ps1  Test_StaticCore.cpp  detection_rules.json  dllmain.cpp  example_memory_usage.cpp  file_integrity_database.json  framework.h  garudahs_config.ini  memory_scanner_config.ini  memory_signatures.json  messages.json  test_memory_scanner.cpp
GarudaHS_Client/Debug/: GarudaHS_Client.dll.recipe  GarudaHS_Client.ilk  vc143.idb
GarudaHS_Client/Debug/GarudaHS_Client.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
GarudaHS_Client/GarudaHS_Client/Debug/: GarudaHS_Client.dll.recipe
GarudaHS_Client/GarudaHS_Client/Debug/GarudaHS_Client.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  GarudaHS_Client.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
GarudaHS_Client/GarudaHS_Client/x64/Debug/: vc143.idb
GarudaHS_Client/GarudaHS_Client/x64/Debug/GarudaHS_Client.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  GarudaHS_Client.lastbuildstate
GarudaHS_Client/Release/GarudaHS_Client.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  GarudaHS_Client.lastbuildstate
GarudaHS_Client/config/: enhanced_config.json
GarudaHS_Client/docs/: API_Reference_Enhanced.md  FileIntegrityCheck_Documentation.md
GarudaHS_Client/examples/: EnhancedAntiCheatExample.cpp  Usage_Example.cpp
GarudaHS_Client/include/: ActionManager.h  AntiDebug.h  AntiSuspendDetectionLayer.h  AntiSuspendThreads.h  Configuration.h  Constants.h  DetectionEngine.h  DynamicBehaviorDetector.h  EnhancedAntiCheatCore.h  EnhancedModuleBlacklist.h  EnhancedSignatureDetector.h  Exports.h  FileIntegrityChecker.h  GameStateManager.h  GarudaHS_Exports.h  GarudaHS_ModuleAggregator.h  GarudaHS_StaticCore.h  HeuristicMemoryScanner.h  InjectionDetectionLayer.h  InjectionScanner.h  LayeredDetection.h  Logger.h  MemorySignatureScanner.h  OverlayDetectionLayer.h  OverlayScanner.h  PerformanceMonitor.h  ProcessWatcher.h  SecurityUtils.h  ThreadInjectionTracer.h  ThreadSafetyUtils.h  WindowDetector.h
GarudaHS_Client/scripts/: build_all_configurations.bat
GarudaHS_Client/src/: AntiDebug.cpp  AntiSuspendDetectionLayer.cpp  AntiSuspendThreads.cpp  Configuration.cpp  DetectionEngine.cpp  DynamicBehaviorDetector.cpp  EnhancedAntiCheatCore.cpp  EnhancedModuleBlacklist.cpp  EnhancedSignatureDetector.cpp  Exports.cpp  FileIntegrityChecker.cpp  GarudaHS_ModuleAggregator.cpp  GarudaHS_StaticCore.cpp  HeuristicMemoryScanner.cpp  InjectionDetectionLayer.cpp  InjectionScanner.cpp  LayeredDetection.cpp  Logger.cpp  MemorySignatureScanner.cpp  OverlayDetectionLayer.cpp  OverlayScanner.cpp  PerformanceMonitor.cpp  ProcessWatcher.cpp  SecurityUtils.cpp  StaticExports.cpp  ThreadInjectionTracer.cpp  WindowDetector.cpp
GarudaHS_Client/tests/: TestClientServerIntegration.cpp  TestFileIntegrityChecker.cpp  test_enhanced_features.cpp
GarudaHS_Client/x64/Debug/: GarudaHS_Client.dll.recipe  GarudaHS_Client.exp  vc143.idb
GarudaHS_Client/x64/Debug/GarudaHS_Client.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
GarudaHS_Server/: GarudaHS_Server.vcxproj  GarudaHS_Server.vcxproj.filters
GarudaHS_Server/Debug/: GarudaHS_Server.exe.recipe  GarudaHS_Server.ilk  vc143.idb
GarudaHS_Server/Release/: GarudaHS_Server.exe.recipe  GarudaHS_Server.iobj  GarudaHS_Server.ipdb
GarudaHS_Server/config/: server_config.json
GarudaHS_Server/include/: FileIntegrityValidator.h
GarudaHS_Server/scripts/: start_server.bat
GarudaHS_Server/src/: FileIntegrityValidator.cpp  server.cpp
Server/: Server.vcxproj  main.cpp
Server/Debug/: Server.exe.recipe  Server.ilk  vc143.idb
client/: client.vcxproj  client.vcxproj.filters  dllmain.cpp
client/Debug/: client.dll.recipe  client.ilk  vc143.idb
client/include/: anti_debug.h  hwid.h  net_report.h  (+1 more)
server/: server.cpp  server.vcxproj  server.vcxproj.filters
(+94 files in other folders)
